# handler/user/create.go
@@ -12,14 +12,15 @@ import (
 )
 
 // Create godoc
-// @Summary Add new user to the database
-// @Description Add a new user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body user.CreateRequest true "Create a new user"
-// @Success 200 {object} user.CreateResponse "{"code":0,"message":"OK","data":{"username":"kong"}}"
-// @Router /v1/user [post]
+//
+//	@Summary		Add new user to the database
+//	@Description	Add a new user
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		user.CreateRequest	true	"Create a new user"
+//	@Success		200		{object}	user.CreateResponse	"{"code":0,"message":"OK","data":{"username":"kong"}}"
+//	@Router			/v1/user [post]
 func Create(c *gin.Context) {
 	log.Info("User Create function called.", lager.Data{"X-Request-Id": util.GetReqID(c)})
 	var r CreateRequest
