# handler/user/list.go
@@ -10,14 +10,17 @@ import (
 )
 
 // List godoc
-// @Summary List the users in the database
-// @Description List users
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body user.ListRequest true "List users"
-// @Success 200 {object} user.SwaggerListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user 'admin' get random string 'EnqntiSig'","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28 00:25:33","updatedAt":"2018-05-28 00:25:33"}]}}"
-// @Router /v1/user [post]
+//
+//	@Summary		List the users in the database
+//	@Description	get users
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			username	query		string						false																									"username"
+//	@Param			offset		query		int							true																									"offset"
+//	@Param			limit		query		int							true																									"limit"
+//	@Success		200			{object}	user.SwaggerListResponse	"{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user	'admin'	get	random	string	'EnqntiSig'","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28	00:25:33","updatedAt":"2018-05-28	00:25:33"}]}}"
+//	@Router			/v1/user [get]
 func List(c *gin.Context) {
 	log.Info("List function called.")
 	var r ListRequest
