# handler/user/update.go
@@ -14,15 +14,16 @@ import (
 )
 
 // Update godoc
-// @Summary Update a user info by the user identifier
-// @Description Update a user by ID
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param id path uint64 true "The user's database id index num"
-// @Param user body model.UserModel true "The user info"
-// @Success 200 {object} handler.Response "{"code":0,"message":"OK","data":null}"
-// @Router /v1/user/{id} [put]
+//
+//	@Summary		Update a user info by the user identifier
+//	@Description	Update a user by ID
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		uint64				true	"The user's database id index num"
+//	@Param			user	body		model.UserModel		true	"The user info"
+//	@Success		200		{object}	handler.Response	"{"code":0,"message":"OK","data":null}"
+//	@Router			/v1/user/{id} [put]
 func Update(c *gin.Context) {
 	log.Info("Update function called.", lager.Data{"X-Request-Id": util.GetReqID(c)})
 	// Get the user id from the url parameter.
